--- a/accueil.html
+++ b/accueil.html
@@ -28,7 +28,8 @@
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
-
+	<!-- Bootstrap  -->
+	<link rel="stylesheet" href="css/ImageList.css">
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
@@ -106,7 +107,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 					<h2><span class="textcouleurmarron">Qui sommes nous ?</span></h2>
-					<p> Les M&eacute;diOCRes PrOCRastinateurs - Epita promo 2025 </p>
+					<p> Groupe OELA - Epita promo 2025 </p>
 				</div>
 			</div>
 
@@ -114,10 +115,10 @@
 				
 				<div class="gtco-tabs">
 					<ul class="gtco-tab-nav">
-						<li class="active"><a href="#" data-tab="1"><span class="icon visible-xs"><i class="icon-marquee"></i></span><span class="hidden-xs">Groupe LMP</span></a></li>
-						<li><a href="#" data-tab="2"><span class="icon visible-xs"><i class="icon-light-up"></i></span><span class="hidden-xs">Nos Valeurs</span></a></li>
-						<li><a href="#" data-tab="3"><span class="icon visible-xs"><i class="icon-game-controller"></i></span><span class="hidden-xs">Notre OCR</span></a></li>
-						<li><a href="#" data-tab="4"><span class="icon visible-xs"><i class="icon-network"></i></span><span class="hidden-xs">Logo et politique</span></a></li>
+						<li class="active"><a href="#" data-tab="1"><span class="icon visible-xs"><i class="icon-marquee"></i></span><span class="hidden-xs">TODO</span></a></li>
+						<li><a href="#" data-tab="2"><span class="icon visible-xs"><i class="icon-light-up"></i></span><span class="hidden-xs">TODO</span></a></li>
+						<li><a href="#" data-tab="3"><span class="icon visible-xs"><i class="icon-game-controller"></i></span><span class="hidden-xs">TODO</span></a></li>
+						<li><a href="#" data-tab="4"><span class="icon visible-xs"><i class="icon-network"></i></span><span class="hidden-xs">TODO</span></a></li>
 					</ul>
 
 					<!-- Tabs -->
@@ -126,7 +127,7 @@
 						<div class="gtco-tab-content tab-content active" data-tab-content="1">
 							<div class="col-md-6">
 								<div class="icon icon-xlg">
-									<img src="images/LMP.png" alt="" height="400" width="400">
+									<img src="images/default.jpeg" alt="" height="400" width="400">
 								</div>
 							</div>
 							<div class="col-md-6">
@@ -171,7 +172,7 @@
 						<div class="gtco-tab-content tab-content" data-tab-content="3">
 							<div class="col-md-6">
 								<div class="icon icon-xlg">
-									<a href="jeu.html"><img src="images/OCR.png" alt="" height="420pw" width="400px"></a>
+									<a href="jeu.html"><img src="images/default.jpeg" alt="" height="420pw" width="400px"></a>
 								</div>
 							</div>
 							<div class="col-md-6">
@@ -222,6 +223,65 @@
 			</div>
 		</div>
 
+		<div class="container py-5">
+				 <!-- IMAGES -->
+				 <div class="py-5">
+					<div class="row animate-box">
+						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
+							<h2><span class="textcouleurmarron">REMPLIR</b></span></h2>
+							<p>REMPLIR</p>
+						</div>
+					</div>
+					<div class="row animate-box">
+					<div class="row">
+					  <!-- IMAGE 1-->
+					  <div class="col-lg-6 mb-3 mb-lg-0">
+						<div class="hover hover-3 text-white rounded"><img src="images/default.jpeg" alt="">
+						  <div class="hover-overlay"></div>
+						  <div class="hover-3-content px-5 py-4">
+							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
+							<p class="hover-3-description small text-uppercase mb-0"><!-- Joueur &eacute;quip&eacute; de son &eacute;p&eacute;e sur la carte 3 !--></p>
+						  </div>
+						</div>
+					  </div>
+					  <!-- IMAGE 2-->
+					  <div class="col-lg-6">
+						<div class="hover hover-3 text-white rounded"><img src="images/default.jpeg" alt="">
+						  <div class="hover-overlay"></div>
+						  <div class="hover-3-content px-5 py-4">
+							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
+							<p class="hover-3-description small text-uppercase mb-0"><!-- Joueur affrontant une IA Archer avec son arc !--></p>
+						  </div>
+						</div>
+					  </div>
+					</div>
+					<br>
+					<div class="row">
+					  <!-- IMAGE 3-->
+					  <div class="col-lg-6 mb-3 mb-lg-0">
+						<div class="hover hover-3 text-white rounded"><img src="images/default.jpeg" alt="">
+						  <div class="hover-overlay"></div>
+						  <div class="hover-3-content px-5 py-4">
+							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
+							<p class="hover-3-description small text-uppercase mb-0"><!-- Joueur &eacute;quip&eacute; de son baton sur la carte 7 !--></p>
+						  </div>
+						</div>
+					  </div>
+					  <!-- IMAGE 4-->
+					  <div class="col-lg-6">
+						<div class="hover hover-3 text-white rounded"><img src="images/default.jpeg" alt="">
+						  <div class="hover-overlay"></div>
+						  <div class="hover-3-content px-5 py-4">
+							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
+							<p class="hover-3-description small text-uppercase mb-0"><!-- Joueur &eacute;quip&eacute; de son &eacute;p&eacute;e sur la carte 5 !--></p>
+						  </div>
+						</div>
+					  </div>
+					</div>
+					</div>
+				 </div>
+			</div>
+	<br><br><br><br>
 	<div id="gtco-counter" class="gtco-bg gtco-counter" style="background-image:url(images/img_bg_1.jpg);">
 		<div class="gtco-container">
 			<div class="row">
@@ -233,8 +293,8 @@
 									<i class="icon-save"></i>
 								</span>
 
-								<span class="counter js-counter" data-from="0" data-to="247" data-speed="4000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Nombre de push</span>
+								<span class="counter js-counter" data-from="0" data-to="0" data-speed="4000" data-refresh-interval="50">1</span>
+								<span class="counter-label">F</span>
 
 							</div>
 						</div>
@@ -244,9 +304,9 @@
 									<i class="icon-trophy"></i>
 								</span>
 								<span class="textcouleurmarron">
-									<span class="counter js-counter" data-from="0" data-to="5" data-speed="4000" data-refresh-interval="50">1</span>
+									<span class="counter js-counter" data-from="0" data-to="0" data-speed="4000" data-refresh-interval="50">1</span>
 								</span>
-								<span class="counter-label">Etapes r&eacute;ussies</span>
+								<span class="counter-label">F</span>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6 animate-box">
@@ -254,8 +314,8 @@
 								<span class="icon">
 									<i class="icon-briefcase"></i>
 								</span>
-								<span class="counter js-counter" data-from="0" data-to="1" data-speed="6000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Projet r&eacute;ussi</span>
+								<span class="counter js-counter" data-from="0" data-to="0" data-speed="6000" data-refresh-interval="50">1</span>
+								<span class="counter-label">1</span>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6 animate-box">
@@ -264,8 +324,8 @@
 									<i class="icon-clock"></i>
 								</span>
 
-								<span class="counter js-counter" data-from="0" data-to="803" data-speed="4000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Heures de travail</span>
+								<span class="counter js-counter" data-from="0" data-to="0" data-speed="4000" data-refresh-interval="50">1</span>
+								<span class="counter-label">5</span>
 
 							</div>
 						</div>
