--- a/equipe.html
+++ b/equipe.html
@@ -145,7 +145,7 @@
 						<p>D&eacute;veloppement :<!-- <br>Traitements de l'image,<br>Reconnaissance des cases,<br>Fonctionnement de l'Interface.</p>-->
 						<ul class="gtco-social-icons">
 							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
-							<li><a href="https://twitter.com/esteban71150" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://twitter.com" target="_blank"><i class="icon-twitter"></i></a></li>
 							<!--<li><a href="#"><i class="icon-dribbble"></i></a></li>-->
 							<li><a href="https://github.com/MathisRabouille" target="_blank"><i class="icon-github"></i></a></li>
 						</ul>
@@ -171,6 +171,27 @@
 	</div>
 
 	</div>
+	<div class="gtco-section">
+		<div class="gtco-coontainer">
+			<div class="row">
+				<div class="col-md-5 col-md-push-1 animate-box">
+					
+					<div class="gtco-contact-info">
+						<h3>Informations de contact</h3>
+						<ul>
+							<li class="address">14 rue Voltaire 94270 le Kremlin-Bic&ecirc;tre</li>
+							<li class="email"><a href="mailto:alexandre.devaux-riviere@epita.fr">alexandre.devaux-riviere@epita.fr</a></li>
+							<li class="icon-twitter"><a href="https://twitter.com/_alexandre_dr">Twitter</a></li>
+							<li class="url"><a href="https://topagrume.github.io/decolor_web/accueil.html">Decolor.co</a></li>
+						</ul>
+					</div>
+
+				</div>
+			</div>
+			
+		</div>
+	</div>
+
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
