--- a/documentation.html
+++ b/documentation.html
@@ -156,7 +156,7 @@
 			<!-- <div class="row"> -->
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-						<h2><span class="textcouleurmarron">Outils pour le d&eacute;veloppement d'Erased</span></h2>
+						<h2><span class="textcouleurmarron">Outils pour le<br>d&eacute;veloppement de Decolor.</span></h2>
 					</div>
 				</div>
 				<div class="row animate-box">
@@ -221,7 +221,7 @@
 								<figure>
 									<img src="images/logo-gtk.png" alt="">
 								</figure>
-								<span>Librairie GTK pour le langage C</span>
+								<span>Librairie GTK<br>pour le langage C</span>
 								<blockquote>
 									<p><a href="https://www.gtk.org/" target="_blank" class="btn btn-primary">Lib. GTK</a></p>
 								</blockquote>
@@ -232,7 +232,7 @@
 								<figure>
 									<img src="images/sdl-logo.png" alt="">
 								</figure>
-								<span>Librairie SDL pour le langage C</span>
+								<span>Librairie SDL<br>pour le langage C</span>
 								<blockquote>
 									<p><a href="https://www.libsdl.org/" target="_blank" class="btn btn-primary">Lib. SDL</a></p>
 								</blockquote>
