--- a/accueil.html
+++ b/accueil.html
@@ -3,9 +3,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Decolor. - OELA</title>
+	<title>Decolor. Accueil</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Decolor. - OELA" />
+	<meta name="description" content="Decolor. Accueil" />
 	<meta name="keywords" content="Accueil Decolor. - OELA" />
 	<meta name="author" content="OELA" />
 
@@ -17,7 +17,7 @@
 
 	<style>
 		.textcouleurbeige {
-		color: #fff9d5;
+		color: #ffffff;
 		}
 	</style>
 
@@ -83,7 +83,7 @@
 		</div>
 	</nav>
 
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/img_bg_03.jpg);">
 
 		<div class="gtco-container">
 			<div class="row">
@@ -222,7 +222,7 @@
 				</div>
 			</div>
 		</div>
-
+		<div id="gtco-started">
 		<div class="container py-5">
 				 <!-- IMAGES -->
 				 <div class="py-5">
@@ -281,8 +281,9 @@
 					</div>
 				 </div>
 			</div>
-	<br><br><br><br>
-	<div id="gtco-counter" class="gtco-bg gtco-counter" style="background-image:url(images/img_bg_1.jpg);">
+		</div>
+	
+	<div id="gtco-counter" class="gtco-bg gtco-counter" style="background-image:url(images/img_bg_06.jpg);">
 		<div class="gtco-container">
 			<div class="row">
 				<div class="display-t">
