--- a/equipe.html
+++ b/equipe.html
@@ -3,9 +3,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Decolor. - OELA</title>
+	<title>Decolor. Equipe</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Decolor. - OELA" />
+	<meta name="description" content="Decolor. Equipe" />
 	<meta name="keywords" content="Accueil Decolor. - OELA" />
 	<meta name="author" content="OELA" />
 
@@ -111,7 +111,7 @@
 			<div class="row">
 				<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
 					<div class="gtco-staff">
-						<img src="images/person_1.jpeg" alt="">
+						<img src="images/alex.jpeg" alt="">
 						<h3>Alexandre Devaux-Riviere</h3>
 						<strong class="role">Chef de Projet</strong>
 						<p>D&eacute;veloppement :<!-- <br> Intelligence Artificielle,<br>Reconnaissance des Chiffres,<br>Interfaces et Site Web.</p>-->
@@ -125,7 +125,7 @@
 				</div>
 				<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
 					<div class="gtco-staff">
-						<img src="images/default.jpeg" alt="">
+						<img src="images/kael.jpeg" alt="">
 						<h3>Ka&euml;l Facon</h3>
 						<strong class="role">Responsable Structure Projet</strong>
 						<p>D&eacute;veloppement : <!-- <br>Traitements de l'image,<br>D&eacute;tection des cases,<br>Rotation automatique.</p>-->
@@ -139,13 +139,13 @@
 				</div>
 				<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
 					<div class="gtco-staff">
-						<img src="images/default.jpeg" alt="">
+						<img src="images/mathis.jpg" alt="">
 						<h3>Mathis Rabouille</h3>
 						<strong class="role">Responsable GTK</strong>
 						<p>D&eacute;veloppement :<!-- <br>Traitements de l'image,<br>Reconnaissance des cases,<br>Fonctionnement de l'Interface.</p>-->
 						<ul class="gtco-social-icons">
 							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
-							<li><a href="https://twitter.com" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://twitter.com/matkiller02" target="_blank"><i class="icon-twitter"></i></a></li>
 							<!--<li><a href="#"><i class="icon-dribbble"></i></a></li>-->
 							<li><a href="https://github.com/MathisRabouille" target="_blank"><i class="icon-github"></i></a></li>
 						</ul>
@@ -154,7 +154,7 @@
 				
 				<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
 					<div class="gtco-staff">
-						<img src="images/default.jpeg" alt="">
+						<img src="images/gregoire.jpg" alt="">
 						<h3>Gr&eacute;goire Vest</h3>
 						<strong class="role">Responsable SDL</strong>
 						<p>D&eacute;veloppement : <!-- <br>Traitements de l'image,<br>D&eacute;tection de la grille,<br>Redimension de l'image.</p>-->
