--- a/avancees.html
+++ b/avancees.html
@@ -3,9 +3,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Decolor. - OELA</title>
+	<title>Decolor. Avancees</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Decolor. - OELA" />
+	<meta name="description" content="Decolor. Avancees" />
 	<meta name="keywords" content="Accueil Decolor. - OELA" />
 	<meta name="author" content="OELA" />
 
@@ -39,10 +39,6 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
 
 	<style>
 		.textcouleurmarron {
@@ -84,7 +80,7 @@
 				</div>
 				<div class="col-xs-2 text-right hidden-xs menu-2">
 					<ul>
-						<li class="btn-cta"><a href="jeu.html"><span>TELECHARGER</span></a></li>
+						<li class="btn-cta"><a href="#"><span>TELECHARGER</span></a></li>
 					</ul>
 				</div>
 			</div>
