--- a/documentation.html
+++ b/documentation.html
@@ -3,9 +3,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Decolor. - OELA</title>
+	<title>Decolor. Documentation</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Decolor. - OELA" />
+	<meta name="description" content="Decolor. Documentation" />
 	<meta name="keywords" content="Accueil Decolor. - OELA" />
 	<meta name="author" content="OELA" />
 
@@ -41,7 +41,7 @@
 
 	<style>
 		.textcouleurbeige {
-		color: #fff9d5;
+		color: #ffffff;
 		}
 	</style>
 
@@ -81,7 +81,7 @@
 		</div>
 	</nav>
 
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/img_bg_04.jpg);">
 
 		<div class="gtco-container">
 			<div class="row">
