--- a/avancees.html
+++ b/avancees.html
@@ -90,7 +90,7 @@
 	
 
 
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/img_bg_4.jpg);">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/avance_bg.jpg);">
 		<center>
 		<br><br><br><br>
 			<img src="images/OELA.png" alt="" height="400" width="400">
@@ -98,6 +98,7 @@
 	</header>
 
 	</div>
+	<div id= "gtco-try4"">
 	<div class="row">
 		<br><br>
 		<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
@@ -229,24 +230,8 @@
 			</div>
 		</div>
 	</div>
-
-	<div class="gtco-cover gtco-cover-sm" style="background-image:url(images/img_bg_3.jpg);">
-		<div class="overlay"></div>
-		<div class="gtco-container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="display-t">
-						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<center>
-							<!--
-								<img src="images/alpha2.png" alt="" height="400" width="400">
-							!-->
-							</center>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+	</div>
+	<div class="gtco-cover gtco-cover-sm" style="background-image:url(images/img_bg_3_new.jpg);">
 	</div>
 
 	<div class="gototop js-top">
