--- a/accueil.html
+++ b/accueil.html
@@ -222,7 +222,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="gtco-started">
+		<div id="gtco-try3">
 		<div class="container py-5">
 				 <!-- IMAGES -->
 				 <div class="py-5">
@@ -288,6 +288,7 @@
 			<div class="row">
 				<div class="display-t">
 					<div class="display-tc">
+					<br>
 						<div class="col-md-3 col-sm-6 animate-box">
 							<div class="feature-center">
 								<span class="icon">
