--- a/documentation.html
+++ b/documentation.html
@@ -81,7 +81,7 @@
 		</div>
 	</nav>
 
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/img_bg_04.jpg);">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/document_bg.jpg);">
 
 		<div class="gtco-container">
 			<div class="row">
