--- a/equipe.html
+++ b/equipe.html
@@ -92,7 +92,7 @@
 		</div>
 	</nav>
 
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/img_bg_4.jpg);">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/equipe.jpg);">
 		<center>
 			<br><br><br><br>
 			<img src="images/OELA.png" alt="" height="400" width="400">
