--- a/equipe.html
+++ b/equipe.html
@@ -72,7 +72,7 @@
 					<ul>
 						<li class="has-dropdown"><a href="accueil.html">Projet</a></li>
 						<li class="has-dropdown">
-							<a href="avancees.html">avanc&eacute;es</a>
+							<a href="avancees.html">Avanc&eacute;es</a>
 						</li>
 						<li class="has-dropdown">
 							<a href="documentation.html">Documentation</a>
@@ -84,7 +84,7 @@
 				</div>
 				<div class="col-xs-2 text-right hidden-xs menu-2">
 					<ul>
-						<li class="btn-cta"><a href="#"><span>TELECHARGER</span></a></li>
+						<li class="btn-cta"><a href="telechargement.html"><span>TELECHARGER</span></a></li>
 					</ul>
 				</div>
 			</div>
