changement couleur titre telechargement + titre page

--- a/telechargement.html
+++ b/telechargement.html
@@ -3,10 +3,10 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Decolor. Accueil</title>
+	<title>Decolor. Telechargement</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Decolor. Accueil" />
-	<meta name="keywords" content="Accueil Decolor. - OELA" />
+	<meta name="description" content="Decolor. Telechargement" />
+	<meta name="keywords" content="Telechargement Decolor. - OELA" />
 	<meta name="author" content="OELA" />
 
 
@@ -18,7 +18,7 @@
 
 	<style>
 		.textcouleurbeige {
-		color: #fff9d5;
+		color: #ffffff;
 		}
 	</style>
 
