--- a/telechargement.html
+++ b/telechargement.html
@@ -73,7 +73,7 @@
 				</div>
 				<div class="col-xs-2 text-right hidden-xs menu-2">
 					<ul>
-						<li class="btn-cta"><a href="#"><span>TELECHARGER</span></a></li>
+						<li class="btn-cta"><a href="telechargement.html"><span>TELECHARGER</span></a></li>
 					</ul>
 				</div>
 			</div>
