Ajout texte: équipe / Documentation + image Decolor

--- a/documentation.html
+++ b/documentation.html
@@ -110,7 +110,7 @@
 						<span class="icon">
 							<i class="icon-folder-images"></i>
 						</span>
-						<h3>Soutenance 1</h3>
+						<h3>C. D. charges</h3>
 						<p>Document essentiel &agrave; l'&eacute;laboration et la r&eacute;alisation du logiciel Decolor</p>
 						<p><a href="pdf/Cahier_des_Charges___OELA.pdf" target="_blank" class="btn btn-primary">Lire</a></p>
 					</div>
@@ -120,7 +120,7 @@
 						<span class="icon">
 							<i class="icon-text-document"></i>
 						</span>
-						<h3>Soutenance 2</h3>
+						<h3>Soutenance 1</h3>
 						<p>Mise au point sur l'&eacute;tat de l'avancement pour le premier palier (en attente)</p>
 						<p><a href="#" target="_blank" class="btn btn-primary">Lire</a></p>
 					</div>
@@ -130,7 +130,7 @@
 						<span class="icon">
 							<i class="icon-trophy"></i>
 						</span>
-						<h3>Visual Studio</h3>
+						<h3>Soutenance 2</h3>
 						<p>Mise au point sur l'&eacute;tat de l'avancement pour le dernier palier (en attente)</p>
 						<p><a href="#" target="_blank" class="btn btn-primary">Lire</a></p>
 					</div>
@@ -221,7 +221,7 @@
 								<figure>
 									<img src="images/logo-gtk.png" alt="">
 								</figure>
-								<span>Librairie GTK<br>pour le langage C</span>
+								<span>Librairie GTK<br>pour l'interface</span>
 								<blockquote>
 									<p><a href="https://www.gtk.org/" target="_blank" class="btn btn-primary">Lib. GTK</a></p>
 								</blockquote>
@@ -232,7 +232,7 @@
 								<figure>
 									<img src="images/sdl-logo.png" alt="">
 								</figure>
-								<span>Librairie SDL<br>pour le langage C</span>
+								<span>Librairie SDL pour <br>traiter les images</span>
 								<blockquote>
 									<p><a href="https://www.libsdl.org/" target="_blank" class="btn btn-primary">Lib. SDL</a></p>
 								</blockquote>
