--- a/equipe.html
+++ b/equipe.html
@@ -114,7 +114,7 @@
 						<img src="images/alex.jpeg" alt="">
 						<h3>Alexandre Devaux-Riviere</h3>
 						<strong class="role">Chef de Projet</strong>
-						<p>D&eacute;veloppement :<!-- <br> Intelligence Artificielle,<br>Reconnaissance des Chiffres,<br>Interfaces et Site Web.</p>-->
+						<p>D&eacute;veloppement :<br>Outils de modifications,<br>Formes et Traitements de l'image.<br>Ergonomie GTK et Site Web.</p>
 						<ul class="gtco-social-icons">
 							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
 							<li><a href="https://twitter.com/_alexandre_dr" target="_blank"><i class="icon-twitter"></i></a></li>
@@ -128,7 +128,7 @@
 						<img src="images/kael.jpeg" alt="">
 						<h3>Ka&euml;l Facon</h3>
 						<strong class="role">Responsable Structure Projet</strong>
-						<p>D&eacute;veloppement : <!-- <br>Traitements de l'image,<br>D&eacute;tection des cases,<br>Rotation automatique.</p>-->
+						<p>D&eacute;veloppement : <br>Ergonomie et Cr&eacute;ation GTK,<br>Gestion des signaux GTK,<br>Fonctionnement de l'interface.</p>
 						<ul class="gtco-social-icons">
 							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
 							<li><a href="https://twitter.com" target="_blank"><i class="icon-twitter"></i></a></li>
@@ -142,7 +142,7 @@
 						<img src="images/mathis.jpg" alt="">
 						<h3>Mathis Rabouille</h3>
 						<strong class="role">Responsable GTK</strong>
-						<p>D&eacute;veloppement :<!-- <br>Traitements de l'image,<br>Reconnaissance des cases,<br>Fonctionnement de l'Interface.</p>-->
+						<p>D&eacute;veloppement : <br>Liaison image / interface,<br>Gestion des signaux GTK,<br>Fonctionnement de l'interface.</p>
 						<ul class="gtco-social-icons">
 							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
 							<li><a href="https://twitter.com/matkiller02" target="_blank"><i class="icon-twitter"></i></a></li>
@@ -157,7 +157,7 @@
 						<img src="images/gregoire.jpg" alt="">
 						<h3>Gr&eacute;goire Vest</h3>
 						<strong class="role">Responsable SDL</strong>
-						<p>D&eacute;veloppement : <!-- <br>Traitements de l'image,<br>D&eacute;tection de la grille,<br>Redimension de l'image.</p>-->
+						<p>D&eacute;veloppement : <br>Outils de modifications,<br>Traitements de l'image,<br>Redimension de l'image.</p>
 						<ul class="gtco-social-icons">
 							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
 							<li><a href="https://twitter.com" target="_blank"><i class="icon-twitter"></i></a></li>
