--- a/accueil.html
+++ b/accueil.html
@@ -91,7 +91,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1><span class="textcouleurbeige"></span></h1>
-							<img src="images/logo-test.png" alt="" height="250pw" width="250px">
+							<img src="images/page1.png" alt="" height="250pw" width="250px">
 							<h1><span class="textcouleurbeige">DECOLOR</span></h1>
 							<h2><span class="textcouleurbeige">Decolor, le nouvel &eacute;diteur graphique</span></h2>
 						</div>
