--- a/accueil.html
+++ b/accueil.html
@@ -91,7 +91,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1><span class="textcouleurbeige"></span></h1>
-							<img src="images/page1.png" alt="" height="250pw" width="250px">
+							<img src="images/Page_accueil.png" alt="" height="250pw" width="250px">
 							<h1><span class="textcouleurbeige">DECOLOR</span></h1>
 							<h2><span class="textcouleurbeige">Decolor, le nouvel &eacute;diteur graphique</span></h2>
 						</div>
@@ -167,7 +167,7 @@
 									</div>
 							</div>
 							<div class="col-md-6">
-								<img src="images/Decolor_Propre.png" alt="" height="218" width="500" >
+								<img src="images/Decolor_presentation.png" alt="" height="218" width="500" >
 								<br><br>
 								<p>- Decolor est un logiciel orient&eacute; vers l'&eacute;dition d'images et le dessin. Tr&egrave;s simple d'utilisation, il permet &agrave; l'utilisateur de laisser libre cours &agrave; sa cr&eacute;ativit&eacute;.<br>
 								- Le principe de l'application consiste &agrave; la mise en place sur une surface blanche, sur laquelle l'utilisateur pourra dessiner avec les diff&eacute;rents outils pr&eacute;sents, mais il pourra &eacute;galement &eacute;diter une image qu'il chargera au pr&eacute;alable.
