Pre-soutenance Update

--- a/accueil.html
+++ b/accueil.html
@@ -273,24 +273,22 @@
 					  <!-- IMAGE 1-->
 					  <div class="col-lg-6 mb-3 mb-lg-0">
 						<div class="hover hover-3 text-white rounded"><img src="images/formes.png" alt="">
-						  <div class="hover-overlay"></div>
+
 						  <div class="hover-3-content px-5 py-4">
 							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
-							<p class="hover-3-description small text-uppercase mb-0">Impl&eacute;mentation algorithmiques<br>des outils de forme 2D</p>
-
 						  </div>
 						</div>
+						<p><span class="textcouleurbeige">Impl&eacute;mentation algorithmiques des outils de forme 2D.</span></p>
 					  </div>
 					  <!-- IMAGE 2-->
 					  <div class="col-lg-6">
 						<div class="hover hover-3 text-white rounded"><img src="images/seal.png" alt="">
-						  <div class="hover-overlay"></div>
+
 						  <div class="hover-3-content px-5 py-4">
 							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
-							<p class="hover-3-description small text-uppercase mb-0">Impl&eacute;mentation algorithmiques<br>du sceau et du crayon</p>
-
 						  </div>
 						</div>
+						<p><span class="textcouleurbeige">  Impl&eacute;mentation algorithmiques du sceau et du crayon.</span></p>
 					  </div>
 					</div>
 					<br>
@@ -298,31 +296,29 @@
 					  <!-- IMAGE 3-->
 					  <div class="col-lg-6 mb-3 mb-lg-0">
 						<div class="hover hover-3 text-white rounded"><img src="images/prototype.png" alt="">
-						  <div class="hover-overlay"></div>
+
 						  <div class="hover-3-content px-5 py-4">
 							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
-							<p class="hover-3-description small text-uppercase mb-0">Cr&eacute;ation du prototype<br>de l'interface</p>
-
 						  </div>
 						</div>
+						<p><span class="textcouleurbeige">Cr&eacute;ation du prototype de l'interface.</span></p>
 					  </div>
 					  <!-- IMAGE 4-->
 					  <div class="col-lg-6">
 						<div class="hover hover-3 text-white rounded"><img src="images/creation.png" alt="">
-						  <div class="hover-overlay"></div>
+
 						  <div class="hover-3-content px-5 py-4">
 							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
-							<p class="hover-3-description small text-uppercase mb-0">&eacute;laboration du prototype<br>de l'interface sur GTK</p>
 							</div>
-
+						</div>
+						<p><span class="textcouleurbeige">&Eacute;laboration du prototype de l'interface sur GTK.</span></p>
 					  </div>
-					</div>
 					</div>
 				 </div>
 			</div>
 		</div>
 	
-	<div id="gtco-counter" class="gtco-bg gtco-counter" style="background-image:url(images/img_bg_06.jpg);">
+	<div id="gtco-counter" class="gtco-bg gtco-counter" style="background-image:url(images/img_bg_05.jpg);">
 		<div class="gtco-container">
 			<div class="row">
 				<div class="display-t">
