--- a/avancees.html
+++ b/avancees.html
@@ -174,13 +174,13 @@
 			<div class="date">1e MAI.</div>
 			<i class="icon fa fa-running"></i>
 			<div class="content" style="margin-right: -220px;">
-				<h2><b>In progress...</b></h2>
+				<h2><b>Creation et am&eacute;lioration de l'interface</b></h2>
 				<p>
-					<!--
-					Cr&eacute;ation d'un site internet gr&acirc;ce a github pour pr&eacute;senter le projet et le groupe.<br>
-					Impl&eacute;mentation de nouvelles cartes cr&eacute;ation de notre premi&egrave;re IA Pathfinding.<br>
-					Cr&eacute;ation d'un barre de vie pour le joueur et mise en place de sa capacit&eacute; &agrave; prendre des d&eacute;gats.<br>
-					!-->
+					Cr&eacute;ation de l'interface utilisateur, ergonomique, pratique et sobre.<br>
+					Corrections concernant la partie interface et GTK du projet.<br>
+					Impl&eacute;mentation des outils directement dans l'interface utilisateur.<br>
+					Corrections pour garder l'interface stable.<br>
+					<b>PREMIERE SOUTENANCE.</b><br>
 				</p>
 			</div>
 		</div>
@@ -188,15 +188,12 @@
 			<div class="date">16 AVR.</div>
 			<i class="icon fa fa-cog"></i>
 			<div class="content" style="margin-left: -220px;">
-				<h2><b>In progress...</b></h2>
+				<h2><b>Concentration sur les outils</b></h2>
 				<p>
-					<!--
-					Impl&eacute;mentation d'un lobby multijoueur pour cr&eacute;er et rejoindre des salles.<br>
-					Ouverture d'un compte Twitter pour faire suivre l'avancement du projet.<br>
-					Inspiration d'autre jeu comme Celeste, HolowKnights et The Binding Of Isaac.<br>
-					Creation d'un logo pour ERASED.<br>
-					<b>PREMIERE SOUTENANCE.</b><br>
-					!-->
+					Impl&eacute;mentation d'outils plus pouss&eacute;s sur la structure de l'image.<br>
+					Ajout de la possibilit&eacute; d'ajouter des formes 2D sur les images.<br>
+					Inspiration d'outils d'autres logiciels tels que Paint3D et Gimp.<br>
+					Cr&eacute;ation d'un site internet gr&acirc;ce a github pour pr&eacute;senter le projet et le groupe.<br>
 				</p>
 			</div>
 		</div>
@@ -204,15 +201,12 @@
 			<div class="date">1e AVR.</div>
 			<i class="icon fa fa-certificate"></i>
 			<div class="content" style="margin-right: -220px;">
-				<h2><b>In progress...</b></h2>
+				<h2><b>Ajout des premiers outils</b></h2>
 				<p>
-					<!--
-					Utilisation de Unity Collab pr&eacute;f&eacute;r&eacute;e &agrave; celle de GitHub.<br>
-					pour mettre en commun le travail facilement.<br>
+					Creation d'un repository GitHub pour mettre en commun le travail facilement.<br>
 					R&eacute;partition des t&acirc;ches et &eacute;quillibrage du travail.<br>
-					Impl&eacute;mentation du premier personnage capable seulement de se d&eacute;placer.<br>
-					Impl&eacute;mentation du premier niveau test.<br>
-					!-->
+					Impl&eacute;mentation des premiers outils tels que le sceau/le pinceau.<br>
+					Impl&eacute;mentation des premiers tests de fonctionnement.<br>
 				</p>
 			</div>
 		</div>
