--- a/accueil.html
+++ b/accueil.html
@@ -343,7 +343,7 @@
 								<span class="textcouleurmarron">
 									<span class="counter js-counter" data-from="0" data-to="19" data-speed="4000" data-refresh-interval="50">1</span>
 								</span>
-								<span class="counter-label">Ajouts r&eacute;ussies</span>
+								<span class="counter-label">Ajouts r&eacute;ussis</span>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6 animate-box">
