Ajouts images et correctifs partie avancée

--- a/accueil.html
+++ b/accueil.html
@@ -265,7 +265,7 @@
 					<div class="row animate-box">
 						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 							<h2><span class="textcouleurmarron">Avancements du Projet</b></span></h2>
-							<p>Premi&egrave;res &eacute;tapes</p>
+							<p>Premiers prototypes et outils</p>
 						</div>
 					</div>
 					<div class="row animate-box">
@@ -288,7 +288,7 @@
 							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
 						  </div>
 						</div>
-						<p><span class="textcouleurbeige">  Impl&eacute;mentation algorithmiques du sceau et du crayon.</span></p>
+						<p><span class="textcouleurbeige">Impl&eacute;mentations algorithmiques du sceau et du crayon.</span></p>
 					  </div>
 					</div>
 					<br>
@@ -314,7 +314,62 @@
 						<p><span class="textcouleurbeige">&Eacute;laboration du prototype de l'interface sur GTK.</span></p>
 					  </div>
 					</div>
+					
+					<div class="row animate-box">
+						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
+							<br><br>
+							<h2><span class="textcouleurmarron">Fusion des algorithmes sur image et de l'interface</b></span></h2>
+							<p>Logos et int&eacute;gration des outils</p>
+						</div>
+					</div>
+					<div class="row animate-box">
+					<div class="row">
+					  <!-- IMAGE 1-->
+					  <div class="col-lg-6 mb-3 mb-lg-0">
+						<div class="hover hover-3 text-white rounded"><img src="images/image1A.png" alt="">
+
+						  <div class="hover-3-content px-5 py-4">
+							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
+						  </div>
+						</div>
+						<p><span class="textcouleurbeige">&Eacute;laboration des logos des outils pour l'interface.</span></p>
+					  </div>
+					  <!-- IMAGE 2-->
+					  <div class="col-lg-6">
+						<div class="hover hover-3 text-white rounded"><img src="images/image1B.png" alt="">
+
+						  <div class="hover-3-content px-5 py-4">
+							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
+						  </div>
+						</div>
+						<p><span class="textcouleurbeige">Impl&eacute;mentation de la taille du crayon et du seuil de tol&eacute;rance du sceau.</span></p>
+					  </div>
+					</div>
+					<br>
+					<div class="row">
+					  <!-- IMAGE 3-->
+					  <div class="col-lg-6 mb-3 mb-lg-0">
+						<div class="hover hover-3 text-white rounded"><img src="images/image1C.png" alt="">
+
+						  <div class="hover-3-content px-5 py-4">
+							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
+						  </div>
+						</div>
+						<p><span class="textcouleurbeige">Interface fonctionnelle et respectant le prototype d'interface originel.</span></p>
+					  </div>
+					  <!-- IMAGE 4-->
+					  <div class="col-lg-6">
+						<div class="hover hover-3 text-white rounded"><img src="images/image1D.png" alt="">
+
+						  <div class="hover-3-content px-5 py-4">
+							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
+							</div>
+						</div>
+						<p><span class="textcouleurbeige">Premier dessin r&eacute;alis&eacute; sur notre application (dessin de Gr&eacute;goire).</span></p>
+					  </div>
+					</div>
 				 </div>
+			  </div>
 			</div>
 		</div>
 	
