--- a/avancees.html
+++ b/avancees.html
@@ -179,7 +179,7 @@
 					Cr&eacute;ation de l'interface utilisateur, ergonomique, pratique et sobre.<br>
 					Corrections concernant la partie interface et GTK du projet.<br>
 					Impl&eacute;mentation des outils directement dans l'interface utilisateur.<br>
-					Corrections pour garder l'interface stable.<br>
+					Corrections pour la stablilit&eacute; et ajouts du retour en arri&egrave;re et retour en avant.<br>
 					<b>PREMIERE SOUTENANCE.</b><br>
 				</p>
 			</div>
