correction couleur title

--- a/accueil.html
+++ b/accueil.html
@@ -20,6 +20,11 @@
 		color: #ffffff;
 		}
 	</style>
+	<style>
+		.textgris {
+		color: #d1d1d1;
+		}
+	</style>
 
 
 	<!-- Animate.css -->
@@ -318,8 +323,8 @@
 					<div class="row animate-box">
 						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 							<br><br>
-							<h2><span class="textcouleurmarron">Fusion des algorithmes sur image et de l'interface</b></span></h2>
-							<p>Logos et int&eacute;gration des outils</p>
+							<h2><span class="textcouleurmarron">Fusion des algorithmes et de l'interface</span></h2>
+							<p><span class="textgris">Logos et int&eacute;gration des outils</span></p>
 						</div>
 					</div>
 					<div class="row animate-box">
