Patch links and download button

--- a/accueil.html
+++ b/accueil.html
@@ -96,9 +96,11 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1><span class="textcouleurbeige"></span></h1>
+							<a href="telechargement.html">
 							<img src="images/Page_accueil.png" alt="" height="250pw" width="250px">
 							<h1><span class="textcouleurbeige">DECOLOR</span></h1>
 							<h2><span class="textcouleurbeige">Decolor, le nouvel &eacute;diteur graphique</span></h2>
+							</a>
 						</div>
 					</div>
 				</div>
