--- a/telechargement.html
+++ b/telechargement.html
@@ -87,9 +87,9 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<a href="jeu.html"><h1><span class="textcouleurbeige">T&eacute;l&eacute;chargez Decolor.</span></h1></a>
-							<p><a href="#" target="_blank" class="btn btn-default"><span class="textcouleurmarron">Version Alpha</span></a></p>
-							<p><a href="#" target="_blank" class="btn btn-default"><span class="textcouleurmarron">Version Finale</span></a></p>
+							<a href="telechargement.html"><h1><span class="textcouleurbeige">T&eacute;l&eacute;chargez Decolor.</span></h1></a>
+							<p><a href="#" target="_blank" class="btn btn-default"><span class="textcouleurmarron">Version 1.0</span></a></p>
+							<p><a href="#" target="_blank" class="btn btn-default"><span class="textcouleurmarron">Version Lite 1.0</span></a></p>
 						</div>
 					</div>
 				</div>
