--- a/telechargement.html
+++ b/telechargement.html
@@ -88,8 +88,8 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<a href="telechargement.html"><h1><span class="textcouleurbeige">T&eacute;l&eacute;chargez Decolor.</span></h1></a>
-							<p><a href="#" target="_blank" class="btn btn-default"><span class="textcouleurmarron">Version 1.0</span></a></p>
-							<p><a href="#" target="_blank" class="btn btn-default"><span class="textcouleurmarron">Version Lite 1.0</span></a></p>
+							<p><a href="dl_project/decolor.tar.gz" download="decolor.tar.gz" class="btn btn-default"><span class="textcouleurmarron">Version 1.0</span></a></p>
+							<p><a href="dl_project/decolor_lite.tar.gz" download="decolor_lite.tar.gz" class="btn btn-default"><span class="textcouleurmarron">Version Lite 1.0</span></a></p>
 						</div>
 					</div>
 				</div>
