--- a/documentation.html
+++ b/documentation.html
@@ -132,7 +132,7 @@
 						</span>
 						<h3>Soutenance 2</h3>
 						<p>Mise au point sur l'&eacute;tat de l'avancement pour le dernier palier (en attente)</p>
-						<p><a href="#" target="_blank" class="btn btn-primary">Lire</a></p>
+						<p><a href="pdf/Soutenance_2___OELA.pdf" target="_blank" class="btn btn-primary">Lire</a></p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-3 animate-box" data-animate-effect="fadeIn">
