--- a/documentation.html
+++ b/documentation.html
@@ -121,8 +121,18 @@
 							<i class="icon-text-document"></i>
 						</span>
 						<h3>Soutenance 1</h3>
-						<p>Mise au point sur l'&eacute;tat de l'avancement pour le premier palier (en attente)</p>
+						<p>Mise au point sur l'&eacute;tat de l'avancement pour le premier palier</p>
 						<p><a href="pdf/Soutenance_1___OELA.pdf" target="_blank" class="btn btn-primary">Lire</a></p>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-3 animate-box" data-animate-effect="fadeIn">
+					<div class="feature-center">
+						<span class="icon">
+							<i class="icon-text-document"></i>
+						</span>
+						<h3>Soutenance 2</h3>
+						<p>Mise au point sur l'&eacute;tat de l'avancement pour le dernier palier</p>
+						<p><a href="pdf/Soutenance_2___OELA.pdf" target="_blank" class="btn btn-primary">Lire</a></p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-3 animate-box" data-animate-effect="fadeIn">
@@ -130,19 +140,9 @@
 						<span class="icon">
 							<i class="icon-trophy"></i>
 						</span>
-						<h3>Soutenance 2</h3>
-						<p>Mise au point sur l'&eacute;tat de l'avancement pour le dernier palier (en attente)</p>
-						<p><a href="pdf/Soutenance_2___OELA.pdf" target="_blank" class="btn btn-primary">Lire</a></p>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-3 animate-box" data-animate-effect="fadeIn">
-					<div class="feature-center">
-						<span class="icon">
-							<i class="icon-network"></i>
-						</span>
-						<h3>Github</h3>
-						<p>Gestionaire version,<br>stockage des fichiers et du site du logiciel Decolor</p>
-						<p><a href="https://github.com/TopAgrume/decolor" target="_blank" class="btn btn-primary">Repository</a></p>
+						<h3>Rapport de Projet</h3>
+						<p>Mise au point sur l'&eacute;tat final et les l'atteinte des objectifs de notre logiciel</p>
+						<p><a href="pdf/Rapport_de_Projet___OELA.pdf" target="_blank" class="btn btn-primary">Lire</a></p>
 					</div>
 				</div>
 
